5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1716_2506.log
== SUBMITION (2019-05-14 17:47:17) 
-- CODE:
anos= 0 
quantidade= float(input("digite a quantidade: "))
percentual_crescimento= float(input("digite o percentual: "))
qtd_retirada_ano= float(input("digite a retirada: "))

while  (0 < quantidade < 12000):
	acrescimno= quantidade * percentual_crescimento/100
	quantidade += acrescimo
	quantidade -= qtd_retirada_ano
	anos += 1 
	
if (quantidade <= 0):
	print("EXTINCAO")
	
else:
	PRINT("LIMITE")
-- EXECUTION TIME:
0.174246
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 8, in <module>
    quantidade += acrescimo
NameError: name 'acrescimo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:47:43) 
-- CODE:
anos= 0 
quantidade= float(input("digite a quantidade: "))
percentual_crescimento= float(input("digite o percentual: "))
qtd_retirada_ano= float(input("digite a retirada: "))

while  (0 < quantidade < 12000):
	acrescimo= quantidade * percentual_crescimento/100
	quantidade += acrescimo
	quantidade -= qtd_retirada_ano
	anos += 1 
	
if (quantidade <= 0):
	print("EXTINCAO")
	
else:
	PRINT("LIMITE")
-- EXECUTION TIME:
0.166038
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:48) 
-- CODE:
anos= 0 
quantidade= float(input("digite a quantidade: "))
percentual_crescimento= float(input("digite o percentual: "))
qtd_retirada_ano= float(input("digite a retirada: "))

while  (0 < quantidade < 12000):
	acrescimo= quantidade * percentual_crescimento/100
	quantidade += acrescimo
	quantidade -= qtd_retirada_ano
	anos += 1 
	
if (quantidade <= 0):
	print("EXTINCAO")
	
else:
	PRINT("LIMITE")
-- OUTPUT:
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:29) 
-- CODE:
anos= 0 
quantidade= float(input("digite a quantidade: "))
percentual_crescimento= float(input("digite o percentual: "))
qtd_retirada_ano= float(input("digite a retirada: "))

while  (0 < quantidade < 12000):
	acrescimo= quantidade * percentual_crescimento/100
	quantidade += acrescimo
	quantidade -= qtd_retirada_ano
	anos += 1 
	
   if (quantidade <= 0):
	print("EXTINCAO")
	
   else:
	PRINT("LIMITE")
-- EXECUTION TIME:
0.233364
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 12
    if (quantidade <= 0):
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
